--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -31,6 +31,9 @@ body {
   display: flex;
   flex-direction: column;
   height: 100%;
+  background-color: #fff7f0;
+  font-family: "Plus Jakarta Sans";
+  font-weight: 500;
 }
 
 main {
@@ -43,7 +46,7 @@ h1 {
 
 .container {
   width: 100%;
-  max-width: 1200px;
+  max-width: 1171px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 30px;
