--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -150,6 +150,7 @@
 .my-work__image-wrapper {
   display: flex;
   align-items: center;
+  justify-content: center;
   width: 100%;
   overflow: hidden;
   margin-bottom: 5.6rem;
