new bug border-radius

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -155,6 +155,10 @@
   overflow: hidden;
   margin-bottom: 5.6rem;
   gap: 3rem;
+
+  & img {
+    border-radius: 8px;
+  }
 }
 
 .my-work-arrow-wrapper {
